# libsodium-neon

./: .eslintrc.yml  .gitignore  .prettierignore  .travis.yml  README.md  package.json  tsconfig.json
lib/: index.js
native/: Cargo.toml  build.rs  index.d.ts
native/src/: benchmarks.rs  external.rs  lib.rs
native/src/internal/: auth.rs  hash.rs  mod.rs  scalarmult.rs  sign.rs  stream.rs  utils.rs
src/: index.ts
test/: index.js
test/helpers/: index.js
test/spec/: complianceSpec.js
test/support/: jasmine.json
