[package]
name = "libsodium-neon"
version = "1.0.3"
authors = ["Wire Swiss GmbH <support@wire.com>"]
build = "build.rs"
license = "GPL-3.0"

[lib]
name = "libsodium_neon"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.17"

[dependencies]
libc = "> 0.1.0"
neon = "0.1.17"
rust_sodium = { git = "https://github.com/maidsafe/rust_sodium", rev = "a1a17b261a0081b94e10179a11816c7894708f34" }
